--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out; 
     -ms-transition: all 0.30s ease-in-out; 
-    -o-trnasition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
     transition: all 0.30s ease-in-out;
 }
 
